--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sporeg
 Title: A package to reconstruct sporadic passive tracking data and measure the bias and uncertainty incurred through the process.
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person("Mary E.", "Bowers", , "mebowers5@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5823-186X"))
@@ -10,3 +10,24 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Imports: 
+    car,
+    dplyr,
+    geosphere,
+    glatos (>= 0.7.3),
+    mapview,
+    oceanmap,
+    parallel,
+    pathroutr (>= 0.2.1),
+    sf (>= 1.0-12),
+    sp
+Remotes: 
+    pathroutr,
+    ocean-tracking-network/glatos
+Depends: 
+    R (>= 2.10)
+LazyData: true
