--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Imports:
     sf (>= 1.0-12),
     sp
 Remotes: 
-    pathroutr,
+    jmlondon/pathroutr,
     ocean-tracking-network/glatos
 Depends: 
     R (>= 2.10)
