--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,7 @@ export(simul_trks)
 export(sub_rrt)
 export(zero_var)
 importFrom(magrittr,"%>%")
+importFrom(stats,aggregate)
+importFrom(stats,na.omit)
+importFrom(stats,sd)
+importFrom(stats,setNames)
