created object 'res' for function examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Suggests:
     sp
 VignetteBuilder: knitr
 Imports: 
+    data.table,
     dplyr,
     glatos (>= 0.7.3),
     pathroutr (>= 0.2.1),
@@ -27,6 +28,7 @@ Imports:
     lubridate,
     momentuHMM,
     purrr,
+    readr,
     tibble,
     tidyr,
     units,
