export make_line fx and document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_or)
 export(gps_chr)
 export(gps_fld)
 export(grid_res)
+export(make_line)
 export(powr)
 export(rcv_chr)
 export(simul_trks)
