--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, dev]
+    branches: [main, dev, pages_build_vignette]
   pull_request:
-    branches: [main, dev]
+    branches: [main, dev, pages_build_vignette]
   workflow_dispatch:
 
 name: R-CMD-check
