set false include in verbose chunks of vignette and add stplanr and doFuture to imports and document

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,9 @@ Imports:
     tidyr,
     units,
     magrittr,
-    stats
+    stats,
+    stplanr,
+    doFuture
 Remotes: 
     jmlondon/pathroutr,
     ocean-tracking-network/glatos
